apps/media/emby/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: emby
  namespace: media    
  name: emby
spec:
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      containers:
        - name: emby
          image: emby/embyserver:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "4096Mi"
              cpu: "4"          
              nvidia.com/gpu: 1 # requesting 1 GPUs              
       
          ports:
            - containerPort: 8096
              name: http-emby
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /web/index.html#!/
              port: 8096
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 50
            periodSeconds: 20
            successThreshold: 1
            tcpSocket:
              port: 8096
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: emby-config
            - mountPath: /transcode
              name: emby-transcode              
            - mountPath: /tvshows
              name: emby-tv                          
            - mountPath: /movies
              name: emby-movies                 
      volumes:
        - name: emby-config
          persistentVolumeClaim:
            claimName: pvc-emby-config
        - name: emby-transcode
          persistentVolumeClaim:
            claimName: pvc-emby-transcode
        - name: emby-tv
          persistentVolumeClaim:
            claimName: pvc-emby-tvshows   
        - name: emby-movies
          persistentVolumeClaim:
            claimName: pvc-emby-movies
