apps/media/emby/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: emby
  namespace: media
  name: emby-ingress
  annotations:
spec:
  rules:
  - host: emby.ting
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-emby
            port:
              number: 30007
